--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,8 @@ body {
   --main-text-color: #212121;
   --second-text-color: #757575;
   --negative-text-color: #ffffff;
+
+  --icon-color: currentcolor;
 }
 
 .section {
@@ -55,14 +57,12 @@ body {
   padding: 32px 0;
 }
 
-.buttons .button:hover {
-  color: var(--negative-text-color);
-  background-color: var(--hover-color);
-}
-
+.buttons .button:hover,
 .buttons .button:focus {
   color: var(--negative-text-color);
   background-color: var(--hover-color);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 .buttons .button {
@@ -121,7 +121,6 @@ body {
   line-height: 1.14;
   letter-spacing: 0.02em;
   text-decoration: none;
-
   color: var(--second-text-color);
 }
 .contact-header:hover {
@@ -188,6 +187,7 @@ body {
   line-height: 1.14;
   letter-spacing: 0.03em;
   text-transform: uppercase;
+  margin-top: 30px;
 }
 .headline {
   font-weight: 700;
@@ -207,7 +207,6 @@ body {
 }
 .photo-description {
   padding-top: 30px;
-  padding-bottom: 30px;
   text-align: center;
   gap: 10px;
   display: block;
@@ -224,6 +223,7 @@ body {
 .photo-description p {
   display: block;
   margin-top: 10px;
+  margin-bottom: 16px;
 }
 address p {
   font-size: 14px;
@@ -301,6 +301,12 @@ header {
   background: #2f303a;
   padding: 195px 452px 200px;
   display: block;
+  background-image: linear-gradient(
+      rgba(47, 48, 58, 0.4),
+      rgba(47, 48, 58, 0.4)
+    ),
+    url(/goit-markup-hw-04/images/agencja/background-image.jpg);
+  max-width: 1600px;
 }
 .footer-section {
   background: #2f303a;
@@ -317,13 +323,14 @@ header {
   display: flex;
   gap: 30px;
 }
-.team-list li {
+
+.team-list > li {
   text-align: center;
   background-color: white;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
-  height: 368px;
+
   margin-top: 50px;
 }
 img {
@@ -334,4 +341,110 @@ img {
 
 .team-list figure {
   margin: 0;
+}
+.contact-icon {
+  fill: var(--icon-color);
+  margin-right: 10px;
+}
+.lorem-icon {
+  margin-bottom: 30px;
+}
+.social-icon {
+  fill: rgba(175, 177, 184, 1);
+}
+.social-links-team {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  list-style: none;
+  max-width: 206px;
+  margin: auto;
+  padding: 0;
+  margin-bottom: 30px;
+}
+.social-links-team-space {
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.social-links-team-space:hover,
+.social-links-team-space:focus {
+  background-color: var(--hover-color);
+  cursor: pointer;
+}
+
+.social-links-team-space:hover > svg,
+.social-links-team-space:focus > svg {
+  fill: var(--negative-text-color);
+  cursor: pointer;
+}
+.clients-logos {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  list-style: none;
+  gap: 30px;
+  margin-top: 50px;
+}
+.logo-box {
+  width: 170px;
+  height: 92px;
+  border: 1px solid;
+  border-radius: 4px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: rgba(175, 177, 184, 1);
+}
+.client-logo {
+  fill: rgba(175, 177, 184, 1);
+}
+.logo-box:hover > svg,
+.logo-box:focus > svg {
+  fill: var(--hover-color);
+  cursor: pointer;
+}
+.logo-box:hover,
+.logo-box:focus {
+  color: var(--hover-color);
+  cursor: pointer;
+}
+.footer-block-2 {
+  display: inline-block;
+  width: 206px;
+  margin-left: 70px;
+  margin-top: 12px;
+}
+.footer-block-1 {
+  display: inline-block;
+}
+.footer-container {
+  display: flex;
+}
+.footer-block-2 > h3 {
+  margin-bottom: 20px;
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 16px;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: var(--negative-text-color);
+}
+.social-links-team-space {
+  background-color: rgba(255, 255, 255, 0.1);
+}
+.social-icon-footer {
+  fill: var(--negative-text-color);
+}
+.portfolio-graphic-item:hover,
+.portfolio-graphic-item:focus {
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+    1px 4px 6px rgba(0, 0, 0, 0.16);
+  cursor: pointer;
 }
