--- a/css/style.css
+++ b/css/style.css
@@ -122,7 +122,11 @@ body {
   letter-spacing: 0.02em;
   text-decoration: none;
   color: var(--second-text-color);
+  height: 16px;
+  display: flex;
+  align-items: center;
 }
+
 .contact-header:hover {
   color: var(--hover-color);
 }
